feat: govern managed-file quarantine
